--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       <div class="container">
         <div class="section-head">
           <h1 class="section-title reveal">About APARERI</h1>
-          <p class="section-lead reveal">Luxury engineered for longevity—designed to be worn, repeated, repaired, and kept.</p>
+          <p class="section-lead reveal">Luxury engineered for longevity: designed to be worn, repeated, repaired, and kept.</p>
         </div>
 
         <div class="card reveal">
