--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="hero__copy">
         <div class="kicker reveal">
           <span class="kicker__dot" aria-hidden="true"></span>
-          <span>multimodal clothing • traceable materials • for freedom seekers</span>
+          <span>multimodal clothing • traceable materials • for the freedom seekers</span>
         </div>
 
         <h1 class="h1 reveal">Forever your moment</h1>
@@ -750,12 +750,12 @@
       <div class="container">
         <div class="section-head">
           <h2 class="section-title reveal">FAQ</h2>
-          <p class="section-lead reveal">A few upfront answers while Hera Collection is in prototype testing.</p>
+          <p class="section-lead reveal">A few answers while Hera Collection is in the works.</p>
         </div>
 
         <details class="faq reveal">
           <summary>When is the first drop?</summary>
-          <p>When prototypes pass fit + durability testing. Join the waitlist for first access updates.</p>
+          <p>We're currently post-prototyping and will drop as soon as we set the quality of everything in place. Join the waitlist for first access updates.</p>
         </details>
 
         <details class="faq reveal">
@@ -765,13 +765,12 @@
 
         <details class="faq reveal">
           <summary>What makes the pieces “created to last”?</summary>
-          <p>Material performance, construction choices, and care guidance—plus a repair-forward design mindset.</p>
+          <p>Material performance, construction choices, care guidance, and a repair-forward design mindset.</p>
         </details>
 
         <details class="faq reveal">
           <summary>Do you track visitors?</summary>
-          <p>No trackers or ad pixels by default. The waitlist stores submissions securely in the hosting provider’s
-            form system.</p>
+          <p>No trackers. We only use the information you share to contact you about important updates.</p>
         </details>
       </div>
     </section>
