--- a/thanks/index.html
+++ b/thanks/index.html
@@ -24,7 +24,7 @@
       <a class="brand" href="../index.html" aria-label="APARERI home">
         <span class="brand__mark" aria-hidden="true"></span>
         <span class="brand__name">APARERI</span>
-        <span class="brand__tag">For a Lifetime</span>
+        <span class="brand__tag">For the freedom seekers</span>
       </a>
 
       <nav class="nav" aria-label="Primary navigation">
@@ -64,7 +64,7 @@
     <section class="section">
       <div class="container">
         <div class="section-head">
-          <h1 class="section-title reveal">You’re on the list.</h1>
+          <h1 class="section-title reveal">You’re on the list!</h1>
           <p class="section-lead reveal">Thanks for joining. You’ll get first access to Collection 001 updates.</p>
         </div>
 
