--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>APARERI — Luxury engineered for longevity</title>
+  <title>APARERI — For the freedom seekers</title>
   <meta name="description"
     content="High-end sustainable fashion: multimodal garments, traceable materials, created to last years. Join the waitlist for early access." />
   <meta name="theme-color" content="#0B6B4F" />
@@ -16,7 +16,7 @@
   <!-- Open Graph / Social -->
   <meta property="og:title" content="APARERI" />
   <meta property="og:description"
-    content="Luxury engineered for longevity. Multimodal garments, traceable materials." />
+    content="For the freedom seekers. Multimodal garments, traceable materials." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/og.png" />
   <meta name="twitter:card" content="summary_large_image" />
