--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Open Graph / Social -->
   <meta property="og:title" content="APARERI" />
   <meta property="og:description"
-    content="For the freedom seekers. Multimodal garments, traceable materials." />
+    content="For the freedom seekers [sustainaly made multimodal garments]." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/og.png" />
   <meta name="twitter:card" content="summary_large_image" />
