--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
           <div class="card reveal">
             <div class="card-head">
               <h3>Capsule calculator</h3>
-              <span class="pill pill--soft">outfit combos</span>
+              <span class="pill pill--soft">how many outfit combos can you get from your closet?</span>
             </div>
 
             <div class="field-row" style="margin-top: 12px;">
