--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
           <div class="card reveal">
             <div class="card-head">
               <h3>Multimodality calculator</h3>
-              <span class="pill pill--soft">how many different ways you can wear exactly 1 garment?</span>
+              <span class="pill pill--soft">select your preferred mode for some magic!</span>
             </div>
 
             <p class="small" style="margin-top: 0; color: rgba(255,255,255,0.76);">
